k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blackjack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackjack-dealer
  namespace: blackjack
  labels:
    app.kubernetes.io/name: blackjack-dealer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: blackjack-dealer
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: blackjack-dealer
    spec:
      containers:
        - name: blackjack-dealer
          image: "ghcr.io/unleash/blackjack-server-rs:edge"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1337
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              port: http
              path: /health
            initialDelaySeconds: 20
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: 100m
              memory: 100M
            requests:
              cpu: 10m
              memory: 50M
