k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-dealer
  namespace: blackjack
  labels:
    app.kubernetes.io/name: blackjack-dealer
spec:
  type: ClusterIP
  ports:
    - port: 1337
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: blackjack-dealer
